--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </header>
     <div id="modal">
         <p class="closeModal">x</p>
-        <p>----Details---</p>
+        <p class="name">name</p>
+        <p class="lastName">name</p>
+        <p class="school">name</p>
     </div>
     <nav id="buttons" class="hidden">
         <div id="sorting">
@@ -47,7 +49,7 @@
             <td data-firstname>FIRSTNAME</td>
             <td data-lastname>LASTNAME</td>
             <td data-house>HOUSE</td>
-            <td><button>delete</button></td>
+            <td><button class="deleteButton">delete</button></td>
         </tr>
     </template>
 
