--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
     </header>
     <div id="modal">
         <p class="closeModal">x</p>
-        <p class="name">name</p>
-        <p class="lastName">name</p>
-        <p class="school">name</p>
+        <p class="name">Detail_placeholder1</p>
+        <p class="lastName">Detail_placeholder2</p>
+        <p class="school">Detail_placeholder3</p>
     </div>
     <nav id="buttons" class="hidden">
         <div id="sorting">
             Sort by:
-            <div id="sort_first">First name</div>
-            <div id="sort_last">Last name</div>
-            <div id="sort_house">House</div>
+            <div id="sort_first">- First name</div>
+            <div id="sort_last">- Last name</div>
+            <div id="sort_house">- House</div>
         </div>
         <div id="filters">
             Filter:<br />
-            <a href="#" data-filter="all">all</a>
-            <a href="#" data-filter="Gryffindor">Gryffindor</a>
-            <a href="#" data-filter="Hufflepuff">Hufflepuff</a>
-            <a href="#" data-filter="Ravenclaw">Ravenclaw</a>
-            <a href="#" data-filter="Slytherin">Slytherin</a>
+            <a href="#" data-filter="all">- all</a>
+            <a href="#" data-filter="Gryffindor">- Gryffindor</a>
+            <a href="#" data-filter="Hufflepuff">- Hufflepuff</a>
+            <a href="#" data-filter="Ravenclaw">- Ravenclaw</a>
+            <a href="#" data-filter="Slytherin">- Slytherin</a>
         </div>
     </nav>
 
